--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@ confflags = --disable-rpath --disable-video-directfb \
             --disable-nas --disable-esd --disable-arts \
             --disable-alsa-shared --disable-pulseaudio-shared \
             --disable-x11-shared  --disable-video-opengl --enable-video-opengles --enable-video-mali \
-            --disable-esd --disable-pulseaudio \
+            --disable-esd  \
             --disable-input-tslib
 
 %:
